# neso-solar-consumer

./: .all-contributorsrc  .gitignore  Dockerfile  LICENSE  README.md  app.py  dev-requirements.in  dev-requirements.txt  fetch_data.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker-build.yml  pytest.yaml
neso_solar_consumer/: __init__.py  app.py  config.py  fetch_data.py  format_forecast.py  save_forecast.py  save_forecasts.py
tests/: conftest.py  test_fetch_data.py  test_format_forecast.py  test_real_forecasts.py  test_save_forecasts.py
