[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neso_solar_consumer"
version = "0.1"
dependencies = [
    "pandas","sqlalchemy","nowcasting_datamodel"
]

[project.optional-dependencies]
dev = [
    "pytest", 
    "pytest-cov", 
    "pytest-xdist", 
    "black", 
    "ruff",
    "testcontainers"
]
