[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neso_solar_consumer"
version = "0.1"
dependencies = [
    "pandas",
    "sqlalchemy",
    "nowcasting_datamodel==1.5.56",
    "testcontainers"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "pandas"
]
